fixed text alignment in experience for Edge and IE

--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -2771,7 +2771,7 @@ input, select, textarea {
 
 			ul.pagination li:last-child {
 				width: calc(50% - 2px);
-				text-align: right;
+				text-align: left;
 				padding-left: 0.325em;
 			}
 
@@ -3810,7 +3810,7 @@ input, select, textarea {
 				-webkit-flex-direction: row-reverse;
 				-ms-flex-direction: row-reverse;
 				flex-direction: row-reverse;
-				text-align: right;
+				text-align: left;
 			}
 
 			.wrapper.spotlight:nth-child(2n - 1) .image {
